# unitree_go2_HERO

./: .gitignore  README.md
slam_ws/: frames_2025-11-15_20.58.14.gv
slam_ws/broken/laser_scan_bridge_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
slam_ws/broken/laser_scan_bridge_ws/install/laser_scan_bridge/lib/laser_scan_bridge/: scan_publisher_node  scan_subscriber_node
slam_ws/broken/laser_scan_bridge_ws/install/laser_scan_bridge/share/laser_scan_bridge/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
slam_ws/broken/laser_scan_bridge_ws/log/: latest_build
slam_ws/broken/laser_scan_bridge_ws/src/: CMakeLists.txt
slam_ws/broken/laser_scan_bridge_ws/src/launch/: bridge_launch.py
slam_ws/broken/laser_scan_bridge_ws/src/src/: scan_subscriber_node.cpp
slam_ws/cartographer_ws/: frames_2025-11-17_21.05.36.gv  map_1763374107.pgm  map_1763374107.yaml
slam_ws/cartographer_ws/TF_tree_frames/: frames_2025-11-17_18.23.07.gv  frames_2025-11-17_19.30.05.gv
slam_ws/cartographer_ws/install/: local_setup.sh  setup.sh
slam_ws/cartographer_ws/install/go2_cartographer/share/go2_cartographer/: local_setup.sh  package.bash  package.sh  package.xml
slam_ws/cartographer_ws/install/go2_cartographer/share/go2_cartographer/config/: go2_cartographer.lua
slam_ws/cartographer_ws/install/go2_cartographer/share/go2_cartographer/launch/: go2_cartographer.launch.py
slam_ws/cartographer_ws/log/: latest_build
slam_ws/cartographer_ws/src/go2_cartographer/: CMakeLists.txt
slam_ws/cartographer_ws/src/go2_cartographer/config/: cartographer_qos.yaml
slam_ws/cartographer_ws/src/go2_cartographer/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
slam_ws/cartographer_ws/src/go2_cartographer/install/go2_cartographer/share/ament_index/resource_index/parent_prefix_path/: go2_cartographer
slam_ws/cartographer_ws/src/go2_cartographer/install/go2_cartographer/share/go2_cartographer/: package.dsv  package.ps1  package.sh  package.zsh
slam_ws/cartographer_ws/src/go2_cartographer/install/go2_cartographer/share/go2_cartographer/launch/: go2_cartographer.launch.py
slam_ws/cartographer_ws/src/go2_cartographer/install/go2_cartographer/share/go2_cartographer/rviz/: go2_cartographer.rviz
slam_ws/cartographer_ws/src/go2_cartographer/launch/: go2_cartographer.launch.py  occupancy_grid.launch.py
slam_ws/cartographer_ws/src/go2_cartographer/log/: latest_build
slam_ws/cartographer_ws/src/go2_cartographer/rviz/: go2_cartographer.rviz  go2_cartographer_with_model.rviz
slam_ws/cartographer_ws/src/go2_cartographer/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
slam_ws/cartographer_ws/src/go2_cartographer/src/log/: latest_build
slam_ws/catkin_point_lio_unilidar/install/: local_setup.sh  setup.sh
slam_ws/catkin_point_lio_unilidar/install/point_lio/lib/point_lio/: pointlio_mapping
slam_ws/catkin_point_lio_unilidar/install/point_lio/share/point_lio/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
slam_ws/catkin_point_lio_unilidar/install/point_lio/share/point_lio/cmake/: ament_cmake_export_dependencies-extras.cmake  point_lioConfig-version.cmake  point_lioConfig.cmake
slam_ws/catkin_point_lio_unilidar/install/point_lio/share/point_lio/config/: avia.yaml  horizon.yaml  mid360.yaml  ouster64.yaml  unilidar_l1.yaml  unilidar_l2.yaml  velody16.yaml
slam_ws/catkin_point_lio_unilidar/install/point_lio/share/point_lio/environment/: ament_prefix_path.dsv  path.dsv
slam_ws/catkin_point_lio_unilidar/install/point_lio/share/point_lio/launch/: correct_odom_unilidar_l1.launch.py  correct_odom_unilidar_l2.launch.py  gdb_debug_example.launch.py  mapping_avia.launch.py  mapping_horizon.launch.py  mapping_mid360.launch.py  mapping_ouster64.launch.py  mapping_unilidar_l1.launch.py  mapping_unilidar_l2.launch.py  mapping_velody16.launch.py
slam_ws/catkin_point_lio_unilidar/install/point_lio/share/point_lio/rviz_cfg/: loam_livox.rviz
slam_ws/catkin_point_lio_unilidar/log/: latest_build
slam_ws/flatten_point_cloud_ws/: CMakeLists.txt  imu_time_sync.py
slam_ws/flatten_point_cloud_ws/config/: flatten_params.yaml
slam_ws/flatten_point_cloud_ws/install/: local_setup.sh  setup.sh  setup.zsh
slam_ws/flatten_point_cloud_ws/install/flatten_pointcloud/share/ament_index/resource_index/package_run_dependencies/: flatten_pointcloud
slam_ws/flatten_point_cloud_ws/install/flatten_pointcloud/share/flatten_pointcloud/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
slam_ws/flatten_point_cloud_ws/launch/: flatten_launch.py
slam_ws/flatten_point_cloud_ws/log/: latest_build
slam_ws/flatten_point_cloud_ws/src/: flatten_node.cpp
slam_ws/kiss-icp_ws/install/: local_setup.sh  setup.sh
slam_ws/kiss-icp_ws/install/kiss_icp/lib/kiss_icp/: kiss_icp_node
slam_ws/kiss-icp_ws/install/kiss_icp/share/kiss_icp/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
slam_ws/kiss-icp_ws/log/: latest_build
slam_ws/other/flatten_point_cloud_ws/: frames_2025-11-15_18.14.58.gv  map_saver.py  package.xml
slam_ws/other/laser_scan_bridge_ws/src/: frames_2025-11-17_16.07.58.gv  package.xml
slam_ws/other/laser_scan_bridge_ws/src/src/: scan_publisher_node.cpp
(+10 files in other folders)
