<?xml version="1.0"?>
<package format="3">
  <name>laser_scan_bridge</name>
  <version>0.0.1</version>
  <description>Bridge to receive laser scan data from Foxy and republish for Humble nav2</description>
  <maintainer email="your.email@example.com">Victor</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>